--- a/Iagen/UserViewer/composer.json
+++ b/Iagen/UserViewer/composer.json
@@ -5,8 +5,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "Mage2Gen",
-            "email": "info@mage2gen.com"
+            "name": "Gabriel S. Santos",
+            "email": "frix131@gmail.com"
         }
     ],
     "minimum-stability": "dev",
